# Algorithmic-strategist

./: .gitignore  README.md  pyproject.toml
.agent/: data_format_reference.md
.agent/workflows/: finish-task.md
config/: symbols.json
src/algorithmic_strategist/: __init__.py  main.py  pulling_historical_data.py
strategies/: sma_crossover.py
tests/: test_main.py  test_pulling_historical_data.py
